Fixed bug #34788 (SOAP Client not applying correct namespace to generated values)